--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="container">
         <h1>Save and View Student Data</h1>
         <label for="studentid">Student ID:</label><br>
-        <input type="text" name="studentid" id="studentid"><br>
+        <input type="text" name="studentId" id="studentId"><br>
         
         <label for="name">Name:</label><br>
         <input type="text" name="name" id="name"><br>
